fixed scrollbars

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -22,7 +22,7 @@ body,html {
   height: auto;
 }
 
-
+::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 10px;
 }
